--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://postgres:Munna%23%23800@localhost:5432/lovnity
+DATABASE_URL=postgres://postgres:postgres@db:5432/lovnity
 PORT=3001
